--- a/blog/app/globals.css
+++ b/blog/app/globals.css
@@ -1,2 +1,6 @@
 @import 'tailwindcss';
 @plugin "@tailwindcss/typography";
+
+.form-input {
+    @apply border border-gray-700 rounded px-2 py-1;
+}
