--- a/app/globals.css
+++ b/app/globals.css
@@ -14,11 +14,11 @@
 }
 
 .Button-primary {
-  @apply cursor-pointer duration-200 ease-in-out hover:scale-105 active:scale-95;
+  @apply duration-200 ease-in-out hover:scale-105 active:scale-95;
 }
 
 .Button-destructive {
-  @apply cursor-pointer duration-200 ease-in-out hover:scale-105 active:scale-95 bg-red-700 text-white;
+  @apply duration-200 ease-in-out hover:scale-105 active:scale-95 bg-red-700 text-white;
 }
 
 .form-error-text {
