--- a/app/globals.css
+++ b/app/globals.css
@@ -30,7 +30,7 @@
 }
 
 .nav-hover-effect:hover {
-  @apply hover:text-white hover:-translate-y-0.5 transition-colors duration-200;
+  @apply group-hover:-translate-y-0.5 transition-colors duration-200;
 }
 
 .ul-basic-text {
@@ -46,7 +46,7 @@
 }
 
 .narrow-page-format {
-  @apply max-w-3xl mx-auto px-4 py-5;
+  @apply max-w-5xl mx-auto px-4 py-5;
 }
 
 :root {
@@ -60,7 +60,7 @@ body {
 
 h1 {
   font-family: var(--font-poppins);
-  @apply text-3xl font-bold;
+  @apply text-4xl 2xl:text-5xl font-bold;
 }
 
 h2 {
